fixes in mock zosmf (ltpa cookie not present)
Signed-off-by: Pablo Hernán Carle <pablo.carle@broadcom.com>